# engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  compile_shaders.sh  configure.sh  env.sh  line.vert.spvasm  lsan.supp  tsan.supp
cmake/: clang-warnings.cmake
engine/: CMakeLists.txt
engine/include/engine/globe/: async_lru_cache.h  cpu_cache.h  data_source.h  globe.h  gpu_cache.h  paged_cache_table.h  test_source.h  tiling.h
engine/include/engine/renderer/: defaults.h  gl_renderer.h  opengl.h  renderer.h  types.h
engine/include/engine/resource/: buffer.h  compute_pipeline.h  material_loader.h  model_loader.h  render_target.h  resource_table.h  shader_loader.h  texture_loader.h  upload.h
engine/include/engine/utils/: camera.h  functions.h  geometry.h  log.h  monitor.h
engine/include/ev2/: context.h  defines.h  device.h  pipeline.h  render.h  resource.h
engine/include/ev2/globe/: data_source.h  globe.h  test_source.h  tiling.h
engine/include/ev2/imgui/: inspector.h  viewport.h
engine/include/ev2/utils/: ansi_colors.h  common.h  geometry.h  log.h
engine/src/: asset_table.cpp  asset_table.h  common.h  device.cpp  device_impl.h  gl_utils.cpp  gpu_table.h  pipeline.cpp  pipeline_impl.h  pool.h  render.cpp  render_impl.h  resource.cpp  resource_impl.h  texture_asset.cpp  upload_pool.h
engine/src/backends/opengl/: CMakeLists.txt  def_opengl.cpp  def_opengl.h  device.cpp  device_impl.h  opengl_def.cpp  pipeline.cpp  pipeline_impl.h  render.cpp  render_impl.h  resource.cpp  resource_impl.h  texture_asset.cpp  upload_pool.cpp  upload_pool.h
engine/src/backends/vulkan/: CMakeLists.txt  context.cpp  context.h  context_impl.h  def_opengl.cpp  def_vulkan.h  device.cpp  device_impl.h  pipeline.cpp  pipeline.h  pipeline_impl.h  render.cpp  render_impl.h  resource.cpp  resource.h  resource_impl.h  texture_asset.cpp  upload_pool.cpp  upload_pool.h
engine/src/debug/: box_debug_view.cpp  box_debug_view.h  camera_debug_view.cpp  camera_debug_view.h
engine/src/globe/: async_lru_cache.cpp  async_lru_cache.h  cpu_cache.cpp  cpu_cache.h  data_source.cpp  globe.cpp  gpu_cache.cpp  gpu_cache.h  minmax_tree.cpp  minmax_tree.h  paged_cache_table.cpp  terrain.cpp  terrain.h  test_source.cpp  tile_cache.cpp  tile_cache.h  tile_cache_segment.cpp
engine/src/imgui/: inspector.cpp  inspector_impl.h
engine/src/renderer/: defaults.cpp  gl_debug.h  gl_renderer.cpp
engine/src/resource/: buffer.cpp  compute_pipeline.cpp  gl_utils.cpp  gl_utils.h  material_loader.cpp  model_loader.cpp  render_target.cpp  resource_table.cpp  shader_loader.cpp  texture_loader.cpp  upload.cpp
engine/src/utils/: array.h  asset_table.cpp  asset_table.h  common.h  geometry.cpp  gpu_table.h  log.cpp  monitor.cpp  platform.cpp  platform.h  pool.cpp  pool.h  thread_pool.cpp  thread_pool.h  timer.h
samples/: CMakeLists.txt
samples/boxes/: aabb.h  bsort.h  main.cpp  network_types.h  rtree.cpp  rtree.h  slab_allocator.cpp  slab_allocator.hpp
samples/default/: CMakeLists.txt  main.cpp
samples/diffusion/: CMakeLists.txt  main.cpp
samples/ev2_fluid/: CMakeLists.txt  main.cpp  poisson_solver.cpp  poisson_solver.h  poisson_test.cpp
samples/ev2_globe/: CMakeLists.txt  main.cpp
samples/ev2_template/: CMakeLists.txt  main.cpp
samples/ev2_test/: CMakeLists.txt  app.cpp  app.h  main.cpp
samples/globe/: CMakeLists.txt  box_display.h  cpu_cache.cpp  cpu_cache.h  dataset.cpp  dataset.h  globe.cpp  globe.h  gpu_cache.cpp  gpu_cache.h  main.cpp  thread_pool.cpp  thread_pool.h  tile_cache.cpp  tile_cache.h  tiling.h
samples/hopf/: CMakeLists.txt  main.cpp  sim.cpp  sim.h
samples/hopf/tmp/: CMakeLists.txt
samples/hopf/tmp/graphics/shader/: spheres_transform.comp
samples/hopf/tmp/simulation/include/: hopf.h
samples/hopf/tmp/simulation/src/: simulation.cpp
samples/hopf/tmp/util/: defines.h
samples/lines/: CMakeLists.txt  globe.cpp  globe.h  main.cpp
samples/shared/: CMakeLists.txt  app.cpp  app.h  heightmap_viewer.cpp  heightmap_viewer.h  panel.cpp  panel.h  texture_viewer.cpp  texture_viewer.h
samples/src/: app.cpp  app.h  view_utils.h
shader/: common.glsl  default_mesh2d.frag  (+5 more)
src/: CMakeLists.txt  app.cpp  app.h  box_display.h  buffer.cpp  buffer.h  camera_controller.h  def_gl.h  geometry.h  gl_debug.h  gl_renderer.cpp  gl_renderer.h  globe.cpp  globe.h  main.cpp  material_loader.cpp  material_loader.h  model_loader.cpp  model_loader.h  render_target.cpp  render_target.h  renderer_defaults.cpp  renderer_defaults.h  resource_loader.cpp  resource_loader.h  resource_table.cpp  resource_table.h  shader_loader.cpp  shader_loader.h  texture_loader.cpp  texture_loader.h  thread_pool.cpp  thread_pool.h
src/debug/: box_debug_view.h  camera_debug_view.h
src/engine/: camera_controller.h  ct_table.cpp  ct_table.h  def_gl.h  geometry.h  gl_debug.h  gl_renderer.cpp  gl_renderer.h  opengl.h  renderer_defaults.cpp  renderer_defaults.h
src/engine/debug/: box_debug_view.h  camera_debug_view.h
src/engine/globe/: cpu_cache.cpp  cpu_cache.h  globe.cpp  globe.h  gpu_cache.cpp  gpu_cache.h  tiling.h
src/engine/renderer/: defaults.h  gl_renderer.cpp  gl_renderer.h
src/engine/resource/: buffer.cpp  buffer.h  material_loader.cpp  material_loader.h  model_loader.cpp  model_loader.h  render_target.cpp  render_target.h  resource_table.cpp  resource_table.h  shader_loader.cpp  texture_loader.cpp  texture_loader.h
src/samples/: CMakeLists.txt
src/samples/default/: main.cpp
src/samples/globe/: CMakeLists.txt  main.cpp
src/samples/lines/: main.cpp
src/samples/src/: app.cpp  app.h  view_utils.h
src/shader/: box_debug.frag  common.glsl  default_mesh2d.frag  default_mesh2d.vert  default_mesh3d.frag  default_mesh3d.vert  framedata.glsl  frustum.vert  globe.glsl  globe_tile.frag  globe_tile.vert  line.frag  line.glsl  line.vert  line2.frag  line2.vert  line_bevel.frag  line_dashed.frag  line_dotted.frag  line_frag_defs.glsl  line_mitre.frag  line_round.frag  line_test.frag  line_texture.frag  screen_quad.frag  screen_quad.vert  version.glsl
src/utils/: log.cpp  log.h  monitor.cpp  monitor.h
(+110 files in other folders)
